--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^7.3.0",
+    "bcrypt": "^5.0.1",
     "chalk": "^5.0.1",
     "cors": "^2.8.5",
     "cryptr": "^6.0.3",
@@ -23,6 +24,7 @@
     "pg": "^8.7.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/chalk": "^2.2.0",
     "@types/cors": "^2.8.12",
     "@types/cryptr": "^4.0.1",
@@ -30,7 +32,9 @@
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
     "@types/pg": "^8.6.5",
+    "i": "^0.3.7",
     "nodemon": "^2.0.19",
+    "npm": "^8.13.2",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   }
