--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "ts": "nodemon src/index.ts"
+    "ts": "nodemon src/index.ts",
+    "build": "tsc",
+	  "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
