--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "ts": "nodemon src/index.ts",
     "build": "tsc",
-	  "start": "node dist/index.js"
+	  "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
